# StateGraph

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSING.md  PUBLISHING.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
bindings/go/: agentstategraph.go  agentstategraph_test.go  go.mod  stategraph.go  stategraph_test.go
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
bindings/typescript/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
bindings/typescript/src/: lib.rs
crates/agentstategraph/: Cargo.toml
crates/agentstategraph-core/: Cargo.toml
crates/agentstategraph-core/src/: commit.rs  diff.rs  epoch.rs  error.rs  intent.rs  lib.rs  merge.rs  object.rs  path.rs  query.rs  schema.rs
crates/agentstategraph-ffi/: Cargo.toml
crates/agentstategraph-ffi/src/: lib.rs
crates/agentstategraph-mcp/: Cargo.toml
crates/agentstategraph-mcp/src/: http.rs  main.rs  server.rs
crates/agentstategraph-storage/: Cargo.toml
crates/agentstategraph-storage/src/: indexeddb.rs  lib.rs  memory.rs  sqlite.rs  traits.rs
crates/agentstategraph-wasm/: Cargo.toml
crates/agentstategraph-wasm/src/: lib.rs
crates/agentstategraph/examples/: agent_workflow.rs  epochs_audit.rs  getting_started.rs  multi_agent.rs  schema_merge.rs
crates/agentstategraph/src/: lib.rs  repo.rs  session.rs  speculation.rs  tree.rs  watch.rs
crates/stategraph/: Cargo.toml
crates/stategraph-core/: Cargo.toml
crates/stategraph-core/src/: commit.rs  error.rs  intent.rs  lib.rs  lifecycle.rs  merge.rs  path.rs
crates/stategraph-ffi/: Cargo.toml
crates/stategraph-ffi/src/: lib.rs
crates/stategraph-mcp/: Cargo.toml
crates/stategraph-mcp/src/: main.rs  server.rs
crates/stategraph-storage/: Cargo.toml
crates/stategraph-storage/src/: indexeddb.rs  lib.rs  memory.rs  sqlite.rs  traits.rs
crates/stategraph-wasm/: Cargo.toml
crates/stategraph-wasm/src/: lib.rs
crates/stategraph/examples/: agent_workflow.rs  epochs_audit.rs  getting_started.rs  multi_agent.rs  schema_merge.rs
crates/stategraph/src/: lib.rs  repo.rs  session.rs  speculation.rs  tree.rs  watch.rs
examples/: python_agent.py  typescript_agent.ts
examples/browser/: index.html
examples/serverless/: README.md
spec/: AGENTSTATEGRAPH-RFC.md  STATEGRAPH-RFC.md
