[workspace]
resolver = "2"
members = [
    "crates/agentstategraph-core",
    "crates/agentstategraph-storage",
    "crates/agentstategraph",
    "crates/agentstategraph-mcp",
    "crates/agentstategraph-ffi",
    "crates/agentstategraph-wasm",
    "bindings/python",
    "bindings/typescript",
]

[workspace.package]
version = "0.3.5-beta.2"
edition = "2024"
authors = ["Craig Brown"]
license = "MIT OR Apache-2.0"
description = "AI-native versioned state store for intent-based systems"
repository = "https://github.com/nosqltips/AgentStateGraph"
homepage = "https://github.com/nosqltips/AgentStateGraph"
documentation = "https://docs.rs/agentstategraph"

[workspace.dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
rusqlite = { version = "0.33", features = ["bundled"] }
