[package]
name = "agentstategraph-python"
version = "0.3.5-beta.2"
edition = "2024"
description = "Python bindings for AgentStateGraph — AI-native versioned state store"
license = "BSL-1.1"

[lib]
name = "agentstategraph_py"
crate-type = ["cdylib"]

[dependencies]
agentstategraph = { path = "../../crates/agentstategraph" }
agentstategraph-core = { path = "../../crates/agentstategraph-core" }
agentstategraph-storage = { path = "../../crates/agentstategraph-storage" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
