[package]
name = "stategraph-napi"
version = "0.1.0"
edition = "2024"
description = "TypeScript/Node.js bindings for StateGraph via napi-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
stategraph = { path = "../../crates/stategraph" }
stategraph-core = { path = "../../crates/stategraph-core" }
stategraph-storage = { path = "../../crates/stategraph-storage" }
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
