[package]
name = "agentstategraph-napi"
version = "0.3.5-beta.2"
edition = "2024"
description = "TypeScript/Node.js bindings for AgentStateGraph via napi-rs"
license = "BSL-1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
agentstategraph = { path = "../../crates/agentstategraph" }
agentstategraph-core = { path = "../../crates/agentstategraph-core" }
agentstategraph-storage = { path = "../../crates/agentstategraph-storage" }
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
