[package]
name = "stategraph-ffi"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "C ABI for StateGraph — enables Go, Ruby, Java, C# bindings"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
stategraph = { path = "../stategraph" }
stategraph-core = { path = "../stategraph-core" }
stategraph-storage = { path = "../stategraph-storage" }
serde_json = { workspace = true }
