[package]
name = "stategraph-wasm"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "WASM bindings for StateGraph — browser, Deno, Node"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stategraph = { path = "../stategraph", default-features = false }
stategraph-core = { path = "../stategraph-core" }
stategraph-storage = { path = "../stategraph-storage", default-features = false, features = ["indexeddb"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = "0.3"
